File: components/nexus-blobstore/src/main/java/org/sonatype/nexus/blobstore/rest/BlobStoreApiSoftQuota.java